[GUI] Fix broken rowHeight calculation; turn row_span into array
The row_span setting in the settings_mapping.json now requires to specify values for each wrapping state (1 column, 2 columns, 4 columns) as an array. This allows more fine grain control over how big a section should be. Also previously the Angular intern calculation would break with too high row_span values due it using pixels which doesn't support decimals. This would result in way too high sections. This commit replaces it with a custom percentage calculation.

--- a/GUI/src/app/pages/generator/generator.component.scss
+++ b/GUI/src/app/pages/generator/generator.component.scss
@@ -120,7 +120,7 @@ nb-card-body {
 }
 
 :host mat-grid-list {
-  height: 98%;
+  height: 100% !important;
 }
 
 :host mat-grid-tile {
